recursion.logo.lessons.recursion.logo.spiral.Spiral.scala.error
Spiral:7: error: ')' expected but double literal found.
    avance(length.0)
                 ^