recursion.logo.lessons.recursion.logo.spiral.Spiral.scala.code
def spiral(steps:Int, angle:Int, length:Int, increment:Int)    {

  if (steps<1){
    return
  }
  else{
    avance(length.0)
    gauche(increment.0)
    return spiral(steps-1,angle,length+increment,increment)
  }
}